<resources>
    <string name="app_name" translatable="false">OnlyCorn</string>
    <string name="login" translatable="false">Đăng nhập</string>
    <string name="register" translatable="false">Đăng ký</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="have_account" translatable="false">Already have account? Login</string>
    <string name="have_no_account" translatable="false">Have no account? Register</string>
    <string name="forgotten_password" translatable="false">Forgotten password</string>
    <string name="default_web_client_id" translatable="false">488134872019-omtbjfapv4hs53rh8lh92480akqo01u0.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>