<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.StartActivity">

    <ImageView
        android:src="@drawable/corn_svgrepo_com"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/login_btn"
        android:layout_marginBottom="100dp"
        android:layout_width="150dp"
        android:layout_height="150dp" />
    <TextView
        android:id="@+id/app_name"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="70dp"
        android:layout_above="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/login_btn"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:background="@drawable/button_primary"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_above="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/register_btn"
        android:text="@string/register"
        android:textSize="11sp"
        android:background="@drawable/button_outline"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="200dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</RelativeLayout>