<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:padding="20dp">

    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/corn_svgrepo_com"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/registerTv"
        android:layout_width="150dp"
        android:layout_height="150dp" />

    <TextView
        android:id="@+id/registerTv"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="50dp"
        android:layout_above="@+id/emailTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <EditText
            android:id="@+id/emailEt"
            android:inputType="textEmailAddress"
            android:textSize="11sp"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/emailTIL"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/passwordEt"
            android:inputType="textPassword"
            android:textSize="11sp"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    
    <Button
        android:id="@+id/register_btn"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="11sp"
        android:background="@drawable/button_primary"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/passwordTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/have_accountTv"
        android:text="@string/have_account"
        android:textAlignment="center"
        android:textSize="11sp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>